--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,9 +11,11 @@ composeBom = "2025.10.01"
 appcompat = "1.7.1"
 playServiceMaps = "10.1.0"
 playServicesMaps = "19.2.0"
+reorderable = "<latest_version>"
 roomRuntime = "2.8.3"
 places = "5.0.0"
 material3 = "1.4.0"
+foundationLayout = "1.9.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +39,8 @@ play-service-maps = { module = "com.google.android.gms:play-service-maps", versi
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+reorderable = { module = "org.burnoutcrew.composereorderable:reorderable", version.ref = "reorderable" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
